--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <button onclick="alerted()">Click</button>
+    <script>
+        function alerted (){
+            alert("hello guys")
+        }
+    </script>
 </body>
 </html>
