--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <button onclick="alerted()">Click</button>
-    <a href="hello2.html">2nd page</a>
-    <script>
-        function alerted (){
-            alert("hello guys")
-        }
-    </script>
+    <h1>Program Program</h1>
+    <ol>
+        <li>
+            <a href="no1.html">Konversi jam, menit, dan detik ke hanya detik</a>
+        </li>
+    </ol>
 </body>
 </html>
