--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Program Program</h1>
-    <ol>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+        .container{
+            text-align: left;
+        }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Program Program</h1>
+      <ol>
         <li>
-            <a href="no1.html">Konversi jam, menit, dan detik ke hanya detik</a>
+          <a href="no1.html">Konversi jam, menit, dan detik ke hanya detik</a>
         </li>
-    </ol>
-</body>
+        <li>
+          <a href="no2.html">Menghitung faktorial secara rekursif</a>
+        </li>
+        <li>
+          <a href="no3.html">Menentukan tahun kabisat</a>
+        </li>
+        <li>
+          <a href="no4.html">Pengecek palindrome</a>
+        </li>
+        <li>
+          <a href="no5.html">Penghitung jumlah huruf</a>
+        </li>
+        <li>
+            <a href="no6.html">Membuat segitiga pascal</a>
+        </li>
+        <li>
+            <a href="no7.html">Menghilangkan tanda baca</a>
+        </li>
+      </ol>
+    </div>
+  </body>
 </html>
